# lib3k

./: CMakeLists.txt  main.cpp  widget.cpp  widget.h  window.cpp  window.h
include/: widget.h  window.h
